--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: outre's homepage
 ---
 <div class="blurb">
 	<h1>Hello, friends</h1>
